// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IDP Authenticator transformer Tests IDP Authenticator Enroll tests should add correct title, description, and button 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.idp.enroll.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.idp.enroll.description",
        },
        "type": "Description",
      },
      {
        "label": "mfa.enroll",
        "options": {
          "isActionStep": false,
          "onClick": [Function],
          "step": "enroll-authenticator",
          "type": "button",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`IDP Authenticator transformer Tests IDP Authenticator Enroll tests should add title, description, spinner and auto-redirect when skipIdpFactorVerificationBtn feature is true 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.idp.enroll.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.idp.enroll.description",
        },
        "type": "Description",
      },
      {
        "type": "Spinner",
      },
      {
        "options": {
          "url": "http://localhost:3000/sso/idps/mockedIdp123?stateToken=mockedStateToken124",
        },
        "type": "Redirect",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`IDP Authenticator transformer Tests IDP Authenticator Enroll tests should not auto-redirect when skipIdpFactorVerificationBtn feature is true but there is an error in transaction 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.idp.enroll.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.idp.enroll.description",
        },
        "type": "Description",
      },
      {
        "label": "mfa.enroll",
        "options": {
          "isActionStep": false,
          "onClick": [Function],
          "step": "enroll-authenticator",
          "type": "button",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`IDP Authenticator transformer Tests IDP Authenticator verify tests should add correct title, description, and button 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.idp.challenge.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.idp.challenge.description",
        },
        "type": "Description",
      },
      {
        "label": "mfa.challenge.verify",
        "options": {
          "isActionStep": false,
          "onClick": [Function],
          "step": "challenge-authenticator",
          "type": "button",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`IDP Authenticator transformer Tests IDP Authenticator verify tests should add title, description, spinner and auto-redirect when skipIdpFactorVerificationBtn feature is true 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.idp.challenge.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.idp.challenge.description",
        },
        "type": "Description",
      },
      {
        "type": "Spinner",
      },
      {
        "options": {
          "url": "http://localhost:3000/sso/idps/mockedIdp123?stateToken=mockedStateToken124",
        },
        "type": "Redirect",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`IDP Authenticator transformer Tests IDP Authenticator verify tests should not auto-redirect when skipIdpFactorVerificationBtn feature is true but there is an error in transaction 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.idp.challenge.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.idp.challenge.description",
        },
        "type": "Description",
      },
      {
        "label": "mfa.challenge.verify",
        "options": {
          "isActionStep": false,
          "onClick": [Function],
          "step": "challenge-authenticator",
          "type": "button",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
